Examples using new kwsMediaApi namespace and new public library location
Change-Id: I9e0ab3fc7ae85e994ad35c796adb527d2d8f9504

--- a/example/PlayerEndpoint-HttpGetEndpoint/demo.html
+++ b/example/PlayerEndpoint-HttpGetEndpoint/demo.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script src="../../dist/KwsMedia.js"></script>
+    <script src="../../dist/kws-media-api.js"></script>
     <script src="demo.js"></script>
   </head>
   <body>
