--- a/example/brazil_demo_2/demo.html
+++ b/example/brazil_demo_2/demo.html
@@ -7,7 +7,7 @@
     <link href="demo.css" rel="stylesheet">
 
     <script src="https://webrtc.googlecode.com/svn/trunk/samples/js/base/adapter.js"></script>
-    <script src="../../dist/KwsMedia.js"></script>
+    <script src="../../dist/kws-media-api.js"></script>
 
     <script src="cpbWebRtc.js"></script>
 
