--- a/example/WebRtcEndpoint_2/demo.html
+++ b/example/WebRtcEndpoint_2/demo.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src="https://webrtc.googlecode.com/svn/trunk/samples/js/base/adapter.js"></script>
-    <script src="../../dist/KwsMedia.js"></script>
+    <script src="../../dist/kws-media-api.js"></script>
     <script src="demo.js"></script>
   </head>
   <body>
