Added new tests (Composite, Register, Error Handling) and refactored HttpEndpoint
Change-Id: Ib5c927bf2a0b425560039ccb98754f6ebd8af4b7

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,13 @@
 		<li><a href="playerJson.html">HTTP Player with JSON protocol</a><sup>*</sup></li>
 		<li><a href="recorder.html">HTTP Recorder</a></li>
 		<li><a href="webrtc.html">WebRTC</a></li>
-		<li><a href="mixer/dispatcher.html">Mixer (dispatcher)</a></li>
+		<li><a href="webrtc/webrtc-one2many.html">WebRTC one to many
+				with register</a></li>
+		<li><a href="mixer/dispatcher.html">Mixer (WebRTC dispatcher)</a></li>
+		<li><a href="mixer/composite.html">Mixer (HTTP Player
+				composite)</a></li>
+		<li><a href="mixer/compositeWebRTC.html">Mixer (WebRTC
+				composite)</a></li>
 	</ul>
 	<div style="width: 500px;">
 		<sup>*</sup> The JSON protocol enhances a HTTP Player by implementing
