--- a/src/main/webapp/webrtc/webrtc-one2many.html
+++ b/src/main/webapp/webrtc/webrtc-one2many.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Kurento demo - WebRTC</title>
-<script src="./js/kws-content-api.js"></script>
-<script src="./lib/adapter.js"></script>
-<script src="./lib/Console.js"></script>
+<title>Kurento demo - WebRTC One to Many</title>
+<script src="../js/kws-content-api.js"></script>
+<script src="../lib/adapter.js"></script>
+<script src="../lib/Console.js"></script>
 <script>
 	var conn;
 
@@ -19,7 +19,7 @@
 
 		// Terminate the connection
 		conn.terminate();
-		log("Connection terminated by user");
+		console.log("Connection terminated by user");
 		remoteVideo.style.background = "";
 
 		// Enable connect button
@@ -32,27 +32,32 @@
 
 		// Set connection success and error events
 		conn.on("start", function(event) {
-			log("Connection started");
+			console.log("Connection started");
 			// Enable terminate button
 			document.getElementById("terminate").disabled = false;
 		});
 		conn.on("terminate", function(event) {
-			log("Connection terminated");
+			console.log("Connection terminated");
+			// Enable start button
+			document.getElementById("start").disabled = false;
 		});
 		conn.on("localstream", function(event) {
-			log("LocalStream set");
+			console.info("LocalStream set");
 		});
 		conn.on("remotestream", function(event) {
-			log("RemoteStream set");
+			console.info("RemoteStream set");
 		});
 		conn.on("mediaevent", function(event) {
-			log("MediaEvent: " + JSON.stringify(event.data));
+			console.info("MediaEvent: " + JSON.stringify(event.data));
+			if ("startConn" == event.type) {
+				conn.start();
+			}
 		});
 		conn.on("error", function(error) {
 			// Enable connect button
 			document.getElementById("start").disabled = false;
 			// Log the error
-			log("Error " + error.message);
+			console.error(error.message);
 		});
 	}
 
@@ -63,70 +68,62 @@
 		// Show spinners
 		var localVideo = document.getElementById("localVideo");
 		var remoteVideo = document.getElementById("remoteVideo");
-		localVideo.poster = "./img/transparent-1px.png";
-		localVideo.style.background = "center transparent url('./img/spinner.gif') no-repeat";
-		remoteVideo.poster = "./img/transparent-1px.png";
-		remoteVideo.style.background = "center transparent url('./img/spinner.gif') no-repeat";
+		localVideo.poster = "../img/transparent-1px.png";
+		localVideo.style.background = "center transparent url('../img/spinner.gif') no-repeat";
+		remoteVideo.poster = "../img/transparent-1px.png";
+		remoteVideo.style.background = "center transparent url('../img/spinner.gif') no-repeat";
 
 		// Create a new connection
-		var handler = document.getElementById("handler").value;
-		var contentId = document.getElementById("contentId").disabled ? ""
-				: "/" + document.getElementById("contentId").value;
-		var endpoint = handler + contentId;
+		var handler = "../webRtcOneToMany"
 		var options = {
 			localVideoTag : "localVideo",
-			remoteVideoTag : "remoteVideo"
+			remoteVideoTag : "remoteVideo",
+			autostart : false
 		};
 
 		try {
-			conn = new kwsContentApi.KwsWebRtcContent(endpoint, options);
-			log("Creating connection to " + endpoint);
+			conn = new kwsContentApi.KwsWebRtcContent(handler, options);
 			initConnection(conn);
+			console.log("Creating connection to " + handler);
+
+			conn.execute("register", "", function(error, result) {
+				document.getElementById("status").value = "Sending register";
+				if (error) {
+					console.error("Error " + error.message);
+				} else {
+					console.info("Result " + result);
+					document.getElementById("status").value = "Register set";
+				}
+			});
+
 		} catch (error) {
 			// Enable start button
 			document.getElementById("start").disabled = false;
 			// Log the error
-			log(error.message);
+			console.error(error.message);
 		}
-	}
-
-	function log(text) {
-		document.getElementById("status").value = text;
-	}
-
-	function handlerChanged() {
-		var handler = document.getElementById("handler").value;
-		var enableHandlerArray = new Array("");
-		document.getElementById("contentId").disabled = (enableHandlerArray
-				.indexOf(handler) == -1);
 	}
 </script>
 </head>
 <body>
-	<h1>WebRTC Demo</h1>
-	<label for="handler">Handler</label>
-	<select id="handler" onchange="handlerChanged()">
-		<option value="./webRtcLoopback">WebRTC in loopback</option>
-		<option value="./webRtcJackVaderLoopback">WebRTC in loopback
-			with JackVader Filter</option>
-		<option value="./webRtcPlateDetector">WebRTC in loopback with
-			Plate Detector Filter</option>
-	</select>
+	<h1>WebRTC One to Many With Register Demo</h1>
+	<div style="width: 1000px;">Connect different computers (with
+		webcam) to this page and click on start. There will be a initial
+		signaling for user registration, and when at least two users are in
+		the room, the video conference will start.</div>
 	<br />
-	<label for="contentId">ContentId</label>
-	<select id="contentId" disabled>
-		<option value="webm">WEBM</option>
-		<option value="mp4">MP4</option>
-	</select>
-	<br />
+
 	<button id="start" onclick="start();">Start</button>
 	<button id="terminate" disabled onclick="terminate();">Terminate</button>
 	<br />
+
 	<video id="localVideo" autoplay controls width="480px" height="360px"></video>
 	<video id="remoteVideo" autoplay controls width="480px" height="360px"></video>
 	<br />
+
 	<label for="output">Status</label>
 	<input id="status" name="status" style="width: 300px" />
+
 	<br />
 	<label for="output">Output</label>
 	<div id="console"></div>
