--- a/src/main/webapp/player.html
+++ b/src/main/webapp/player.html
@@ -1,8 +1,24 @@
 <!DOCTYPE html>
 <html>
+<head>
+<script src="./js/kws-content-api.js"></script>
+<script>
+	var conn;
+	function start() {
+		var options = {
+			remoteVideoTag : "remoteVideo"
+		};
+		conn = new kwsContentApi.KwsContentPlayer("./player", options);
+	}
+	function terminate() {
+		conn.terminate();
+	}
+</script>
+</head>
 <body>
-	<video autoplay>
-		<source src="./player" />
-	</video>
+	<button onclick="start();">Start</button>
+	<button onclick="terminate();">Terminate</button>
+	<br />
+	<video id="remoteVideo" autoplay></video>
 </body>
 </html>
