--- a/src/main/webapp/player.html
+++ b/src/main/webapp/player.html
@@ -6,6 +6,11 @@
 	var video;
 	window.onload = function() {
 		video = document.getElementById("video");
+		setInterval(updateCurrentTime, 500);
+	}
+
+	function updateCurrentTime() {
+		document.getElementById("currentTime").value = video.currentTime;
 	}
 
 	function addEventListener(type, callback) {
@@ -34,7 +39,9 @@
 <body>
 	<video id="video" autoplay controls width="480px" height="360px"></video>
 	<br />
-	<label for="output">Status</label>
+	<label for="status">Status</label>
 	<input id="status" name="status" />
+	<label for="currentTime">Current Time</label>
+	<input id="currentTime" name="currentTime" />
 </body>
 </html>
